spacing and PC layout fixes

--- a/css/2026.css
+++ b/css/2026.css
@@ -11,7 +11,7 @@
     padding:  12px 2vw 14px 2vw;
     border-radius: 10px;
     text-decoration: none;
-    font-size: 1.1em;
+    font-size: 1em;
     font-weight: 400;
     margin-bottom:5px;
     position: relative;
@@ -123,7 +123,7 @@
 
 /* width control */
 .heroBanner {
-    width:100vw;
+    width:100%;
 }
 
 @media screen and (max-width: 750px) {
@@ -781,7 +781,7 @@ body.content2026 {
     background-color: white;
 }
 body.content2026 main {
-    font-size: 18px;
+    font-size: 17px;
     padding: 0;
 }
 
@@ -802,11 +802,11 @@ body.content2026 main article section {
         display: flex;
         flex-wrap: wrap;
         column-gap: 5vw;
-        row-gap: 5vw;
+        row-gap: 2.5vw;
         justify-content: space-around;
     }
     body.content2026 main article section.wrap-columns > div {
-        flex: 0 1 27vw;
+        flex: 0 1 25vw;
     }
     body.content2026 main article section.wrap-columns.teaser {
         text-align: left;
@@ -819,7 +819,7 @@ body.content2026 main article section {
         flex: 0 1 25vw;
     }
     body.content2026 main article section.wrap-columns.teaser > div.content {
-        flex: 0 1 29vw;
+        flex: 0 1 28vw;
     }
 }
 @media screen and (min-width:1300px) {
@@ -835,7 +835,8 @@ body.content2026 main article section {
 
 
 body.content2026 main h1 {
-    font-size: 4.2vw;
+    font-size: 3.8vw;
+    line-height: 1em;
     text-wrap: balance;
     border: none;
     margin-top: 0 !important;
@@ -844,7 +845,7 @@ body.content2026 main h1 {
     font-weight: 600;
 }
 body.content2026 main h2 {
-    font-size: 3vw;
+    font-size: 2.8vw;
     font-weight: 600;
     line-height: 1em;
 }
@@ -866,13 +867,13 @@ body.content2026 main h5 {
     font-weight: 300;
 }
 body.content2026 main h6 {
-    font-size: 1.4vw;
+    font-size: 1.2vw;
     font-weight: 300;
 }
 
 body.content2026 main p {
-    font-size: 1.35em;
-    line-height: 1.35em;
+    font-size: 1em;
+    line-height: 1.25em;
     font-weight: 200;
 }
 body.content2026 main li,
